# College-OOP-Repo

./: Pipfile  README.md
1_lab/: README.md  my_first_app.ipynb  my_first_app.py
2_lab/: 2_lab.py  README.md
3_lab/: 3_lab.ipynb  3_lab.py  README.md
4_lab/: README.md  classes.ipynb
5_lab/: README.md  oop.ipynb
6_lab/: Pipfile  README.md  anime.py  pyproject.toml
7_lab/: README.md
7_lab/agent_assistant/: agent.py
7_lab/agent_assistant/.adk/: session.db
7_lab/agent_expert/: agent.py
7_lab/agent_expert/.adk/: session.db
7_lab/agent_writer/: agent.py
7_lab/agent_writer/.adk/: session.db
7_lab/conversation_agent/.adk/: session.db
7_lab/creative_writer/: agent.py
7_lab/creative_writer/.adk/: session.db
7_lab/game_idea_generator/: agent.py
7_lab/game_idea_generator/.adk/: session.db
7_lab/math_agent/: agent.py
7_lab/math_agent/.adk/: session.db
7_lab/my_first_agent/: agent.py
7_lab/my_first_agent/.adk/: session.db
7_lab/student_helper/.adk/: session.db
exam/: exam.ipynb
init/: READMR.md
